# clevis

./: .gitignore  .travis.yml  COPYING.openssl  INSTALL.md  Makefile.am  README.md  clevis-decrypt.c  clevis-pin-http.c  clevis-pin-sss.c  clevis-pin-tang.c  clevis-pin-test.c  clevis.c  clevis.pc.in  configure.ac  http.c  meson.build  meson_options.txt  readall.c  readall.h  sss.c  sss.h  tang.c  test-pin-http  test-pin-httpd.c  test-pin-sss  test-pin-tang  test-pin-test
.travis/: docker  install  (+1 more)
cmd/pins/: Makefile.am  http.c  libhttp.c  libhttp.h  libreadall.c  libsss.c  libtang.c  sss.c  tang.c  test.c
src/: Makefile.am  buf.c  buf.h  clevis  clevis-bind-luks  clevis-bind-luks.in  clevis-decrypt  clevis-decrypt-http  clevis-decrypt-sss.c  clevis-decrypt-tang  clevis-decrypt-test  clevis-decrypt-tpm2  clevis-decrypt.in  clevis-encrypt-http  clevis-encrypt-sss.c  clevis-encrypt-tang  clevis-encrypt-test  clevis-encrypt-tpm2  clevis-encrypt.c  clevis-encrypt.in  clevis-luks-bind  clevis-luks-list  clevis-luks-unbind  clevis-luks-unlock  clevis-pin-http.c  clevis-pin-tang.c  clevis-pin.c  clevis.1.adoc  clevis.c  clevis.h  clevis.in  crypto.c  crypto.h  json.c  json.h  kdf.c  kdf.h  list.c  list.h  mem.c  (+18 more)
src/bash/: clevis  meson.build
src/bash-completion/: clevis
src/dracut/: Makefile.am  clevis-hook.sh  clevis-hook.sh.in  module-setup.sh  module-setup.sh.in
src/dracut/clevis/: clevis-hook.sh.in  clevis-luks-generic-unlocker  meson.build  module-setup.sh.in
src/dracut/clevis-pin-sss/: module-setup.sh.in
src/dracut/clevis-pin-tang/: meson.build
src/dracut/clevis-pin-tpm2/: module-setup.sh.in
src/initramfs/: clevis-hook  clevis-script
src/initramfs-tools/: Makefile.am  meson.build
src/initramfs-tools/hooks/: clevis-zfs.in  clevis.in  meson.build
src/initramfs-tools/scripts/: meson.build
src/initramfs-tools/scripts/local-bottom/: clevis.in  meson.build
src/initramfs-tools/scripts/local-top/: clevis.in  meson.build
src/initramfs-tools/scripts/zfs-load-key/: clevis-zfs.in  meson.build
src/initramfs/hooks/: clevis
src/initramfs/scripts/local-bottom/: clevis
src/initramfs/scripts/local-top/: clevis
src/luks/: clevis-luks-bind  clevis-luks-bind.1.adoc  clevis-luks-bind.in  clevis-luks-common-functions  clevis-luks-common-functions.in  clevis-luks-edit  clevis-luks-edit.1.adoc  clevis-luks-list  clevis-luks-list.1.adoc  clevis-luks-pass  clevis-luks-pass.1.adoc  clevis-luks-regen  clevis-luks-regen.1.adoc  clevis-luks-report  clevis-luks-report-compare  clevis-luks-report-decode  clevis-luks-report-http  clevis-luks-report-sss  clevis-luks-report-tang  clevis-luks-report.1.adoc  clevis-luks-tpm1-functions  clevis-luks-tpm1-functions.in  clevis-luks-unbind  clevis-luks-unbind.1.adoc  clevis-luks-unbind.in  clevis-luks-unlock  clevis-luks-unlock.1.adoc  clevis-luks-unlock.in  clevis-luks-unlockers.7.adoc  meson.build
src/luks/dracut/: meson.build
src/luks/dracut/clevis-pin-null/: meson.build  module-setup.sh.in
src/luks/systemd/: clevis-luks-askpass  clevis-luks-askpass.in  clevis-luks-askpass.path  clevis-luks-askpass.service.in  clevis-luks-pkcs11-askpass.in  clevis-luks-pkcs11-askpass.service.in  clevis-luks-pkcs11-askpass.socket  clevis-luks-pkcs11-askpin.in  clevis-tcsd.conf  meson.build
src/luks/tests/: assume-yes  assume-yes-luks2  backup-restore-luks1  backup-restore-luks2  bad-sss  bind-already-used-luksmeta-slot  bind-binary-keyfile-luks1  bind-hash-luks1  bind-hash-luks2  bind-key-file-non-interactive-luks1  bind-luks1  bind-luks1-avoid-luksmeta-corruption  bind-luks2  bind-luks2-ext-token  bind-pass-with-newline-keyfile-luks1  bind-pass-with-newline-luks1  bind-wrong-pass-luks1  bind-wrong-pass-luks2  edit-hash-luks1  edit-hash-luks2  edit-tang-luks1  edit-tang-luks2  get-hash-luks1  get-hash-luks2  get-hash-validation  list-multiple-slots-luks1  list-multiple-slots-luks2  list-recursive-luks1  list-recursive-luks2  list-sss-tang-luks1  list-sss-tang-luks2  list-tang-luks1  list-tang-luks2  luks-common-test-functions.in  meson.build  pass-tang-luks1  pass-tang-luks2  regen-hash-luks1  regen-hash-luks2  regen-inplace-luks1  (+15 more)
src/luks/udisks2/: clevis-luks-udisks2.c  meson.build  test-token-to-jwe.c  token-to-jwe.c  token-to-jwe.h
src/mkinitcpio/: clevis.hooks  clevis.install  meson.build
src/pins/: Makefile.am  meson.build  password.c  sss_algo.c  sss_algo.h  sss_main.c
src/pins/fido2/: clevis-decrypt-fido2  clevis-encrypt-fido2  clevis-encrypt-fido2.1.adoc
src/pins/file/: clevis-decrypt-file  clevis-encrypt-file  clevis-encrypt-file.1.adoc  dracut.module-setup.sh.in  initramfs.in  meson.build  pin-file
src/pins/medium/: clevis-decrypt-medium  clevis-encrypt-medium  clevis-encrypt-medium.1.adoc  dracut.module-setup.sh.in  initramfs.in  meson.build  pin-medium
src/pins/pkcs11/: clevis-decrypt-pkcs11  clevis-encrypt-pkcs11  clevis-encrypt-pkcs11.1.adoc  clevis-pkcs11-afunix-socket-unlock.c  clevis-pkcs11-common  meson.build
src/pins/sss/: clevis-decrypt-null  clevis-decrypt-sss.c  clevis-decrypt-test  clevis-encrypt-null  clevis-encrypt-sss.1.adoc  clevis-encrypt-sss.c  clevis-encrypt-test  meson.build  pin-null  pin-sss  pin-test  sss.c  sss.h
src/pins/tang/: clevis-decrypt-tang  clevis-encrypt-tang  clevis-encrypt-tang.1.adoc  meson.build  pin-tang
src/pins/template/: README.md  clevis-decrypt-@pin@  clevis-encrypt-@pin@  clevis-encrypt-@pin@.1.adoc  dracut.module-setup.sh.in  initramfs.in  meson.build  pin-@pin@
src/pins/tpm1/: clevis-decrypt-tpm1  clevis-encrypt-tpm1  clevis-encrypt-tpm1.1.adoc  clevis-tpm1-tcsd-preload.c  meson.build  pin-tpm1
src/pins/tpm2/: clevis-decrypt-tpm2  clevis-encrypt-tpm2  clevis-encrypt-tpm2.1.adoc  meson.build  pin-tpm2
src/systemd/: Makefile.am  clevis-luks-askpass  clevis-luks-askpass.path  clevis-luks-askpass.service.in
src/udisks2/: Makefile.am  clevis-luks-udisks2.c
src/zfs/: clevis-zfs-bind  clevis-zfs-common  clevis-zfs-list  clevis-zfs-test  clevis-zfs-unbind  clevis-zfs-unlock  meson.build
udisks2/: Makefile.am  clevis-luks-udisks2.c  clevis-luks-udisks2.desktop.in
(+108 files in other folders)
