DISTCHECK_CONFIGURE_FLAGS = --with-dracutmodulesdir=$$dc_install_base/$(dracutmodulesdir)
SUBDIRS = . src tests
EXTRA_DIST = COPYING

dist_man1_MANS = \
    doc/clevis-encrypt-tang.1 \
    doc/clevis-encrypt-http.1 \
    doc/clevis-encrypt-sss.1 \
    doc/clevis-luks-bind.1 \
    doc/clevis-decrypt.1 \
    doc/clevis.1
