subdir('bash')
subdir('luks')
subdir('pins')
subdir('initramfs-tools')

bins += join_paths(meson.current_source_dir(), 'clevis-decrypt')
mans += join_paths(meson.current_source_dir(), 'clevis-decrypt.1')

bins += join_paths(meson.current_source_dir(), 'clevis')
mans += join_paths(meson.current_source_dir(), 'clevis.1')
