bins += join_paths(meson.current_source_dir(), 'clevis-zfs-bind')
bins += join_paths(meson.current_source_dir(), 'clevis-zfs-common')
bins += join_paths(meson.current_source_dir(), 'clevis-zfs-list')
bins += join_paths(meson.current_source_dir(), 'clevis-zfs-test')
bins += join_paths(meson.current_source_dir(), 'clevis-zfs-unbind')
bins += join_paths(meson.current_source_dir(), 'clevis-zfs-unlock')
